--- a/HW2/rottenpotatoes/app/views/movies/index.html.haml
+++ b/HW2/rottenpotatoes/app/views/movies/index.html.haml
@@ -1,12 +1,20 @@
 -#  This file is app/views/movies/index.html.haml
 %h1 All Movies
 
+= form_tag movies_path, :id => 'ratings_form', :method => :get do
+  Include:
+  - @all_ratings.each do |rating|
+    = rating
+    = check_box_tag "ratings[#{rating}]"
+  = submit_tag 'Refresh'
+
+
 %table#movies
   %thead
     %tr
-      %th Movie Title
+      %th{:class => @class["title"]}= link_to 'Movie Title', movies_path(:order => 'title'), :id => 'title_header'
       %th Rating
-      %th Release Date
+      %th{:class => @class["release_date"]}= link_to 'Release Date', movies_path(:order => 'release_date'), :id => 'release_date_header'
       %th More Info
   %tbody
     - @movies.each do |movie|
