primer intento de instalar la práctica 2 en heroku

--- a/HW2/rottenpotatoes/app/views/movies/index.html.haml
+++ b/HW2/rottenpotatoes/app/views/movies/index.html.haml
@@ -3,9 +3,9 @@
 
 = form_tag movies_path, :id => 'ratings_form', :method => :get do
   Include:
-  - @all_ratings.each do |rating|
+  - @all_ratings.each do |rating, status|
     = rating
-    = check_box_tag "ratings[#{rating}]"
+    = check_box_tag "ratings[#{rating}]", 1, checked=status
   = submit_tag 'Refresh'
 
 
